SPRINGBOOT/SECURITY/OKTA/OKTASPRINGBOOTMICROSERVICES/Kayak Repo/deployment-mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    appdb: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      appdb: mongodb
  template:
    metadata:
      labels:
        appdb: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:3.6.6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: hostvol
              mountPath: /data/db
      volumes:
        - name: hostvol
          persistentVolumeClaim:
            claimName: mongo-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  ports:
    - port: 27017
      protocol: TCP
  selector:
    appdb: mongodb
